[package]
name = "dogma-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Edge proxy / reverse proxy for the Dogma ecosystem — Axum HTTP server, SSE streaming, RAG orchestration"

[dependencies]
# HTTP framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Structured logging (stderr)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Async streams (SSE)
futures = "0.3"

# Internal workspace crates
dogma-v2-common = { path = "../dogma-agent/dogma-v2-common" }

[profile.release]
opt-level = "z"
lto = true
strip = true
